# fldigi-mcp

./: .gitignore  .mcpbignore  CHANGELOG.md  CONTRIBUTING.md  README.md  manifest.json  pyproject.toml  server.json  smoke_test.py
docs/: FLDIGI-API-SPEC.md  FLDIGI-API.md  INSTALL.md  TEST-PLAN.md  band-guidance.md  install-and-safety.md
src/fldigi_mcp/: __init__.py  bandplan.py  client.py  config.py  diag.py  methods.py  process.py  server.py
src/fldigi_mcp/data/: band_plans.yaml
tests/: test_bandplan.py  test_client.py  test_methods.py
