[project]
name = "fldigi-mcp"
version = "0.1.0"
description = "An MCP server for controlling the fldigi digital-modem application over XML-RPC."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Stefan Brunner (AE5VG)", email = "me@stefanbrunner.org" },
]
keywords = [
    "fldigi",
    "mcp",
    "model-context-protocol",
    "ham-radio",
    "amateur-radio",
    "xmlrpc",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Ham Radio",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
fldigi-mcp = "fldigi_mcp.server:main"

[project.urls]
Homepage = "https://github.com/sbrunner-atx/fldigi-mcp"
Repository = "https://github.com/sbrunner-atx/fldigi-mcp"
Issues = "https://github.com/sbrunner-atx/fldigi-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fldigi_mcp"]

# Ruff is a fast linter/formatter; configuring it here is a sign of a maintained
# project. We run it in CI in a later phase.
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
